# Bilingual_L-CiteEval-Ultra

./: .gitignore  README.md  README_ZH.md  test.py
en/l-citeeval/: inference_1shot_vllm.py
mkdata/: check_data.ipynb  deploy.py  formal.py  log  mk.py  mk_qa1_source.py  mk_yesno_source.py  mkdata_prompt.py  push.py
mkdata/vllm/: run.sh
src/: l_citeeval_metrics.py  pyproject.toml  requirements.txt
src/bilingual_citeeval_benchmark/: README.md  pyproject.toml  requirements.txt
src/bilingual_citeeval_benchmark/config/: default.yaml
src/bilingual_citeeval_benchmark/demo_prompt/ZH_CiteEval/: 1_hop_default.jsonl  2_hop_default.jsonl  3_hop_default.jsonl  counting_stars_default.jsonl
src/bilingual_citeeval_benchmark/lte.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/bilingual_citeeval_benchmark/models_deploy/: __init__.py
src/bilingual_citeeval_benchmark/scripts/: pred.py  prepare.py  run_jbb.py
src/config/: _nolog.yaml  default.yaml
src/data/: readme.md
src/demo_prompt/ZH_CiteEval/: yes_no_default.jsonl
src/lte.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/models_deploy/: transformer.py  vllm.py
src/scripts/: eval.py  eval_track1.py  eval_track2.py  pred.py  prepare.py  run.py
src/utils/: request.py
